--- a/app/assets/stylesheets/welcome.css.scss.erb
+++ b/app/assets/stylesheets/welcome.css.scss.erb
@@ -9,8 +9,8 @@
        weight: 'normal';
        style: 'normal';
     }
-    src: asset-url('Bemio.otf', font);
-    src:asset-url('Bemio.otf?#iefix') format('opentype');
+  //  src: asset-url('Bemio.otf', font);
+  //  src:asset-url('Bemio.otf?#iefix') format('opentype');
 
 }
 
@@ -20,8 +20,8 @@
        weight: 'normal';
        style: 'normal';
     }
-    src: asset-url('Serifa.otf', font);
-    src:asset-url('Serifa.otf?#iefix') format('opentype');
+ //   src: asset-url('Serifa.otf', font);
+  //  src:asset-url('Serifa.otf?#iefix') format('opentype');
 
 }
 
@@ -31,8 +31,8 @@
        weight: 'normal';
        style: 'normal';
     }
-    src: asset-url('SerifaBold.otf', font);
-    src:asset-url('SerifaBold.otf?#iefix') format('opentype');
+  //  src: asset-url('SerifaBold.otf', font);
+   // src:asset-url('SerifaBold.otf?#iefix') format('opentype');
 }
 
 $font-stack:    Serifa, Helvetica, sans-serif;
