--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -10,7 +10,7 @@
        style: 'normal';
     }
    src: asset-url('Bemio.otf', font);
-    src:asset-url('Bemio.otf?#iefix') format('opentype');
+   src: asset-url('Bemio.otf?#iefix') format('opentype');
 
 }
 
@@ -21,7 +21,7 @@
        style: 'normal';
     }
    src: asset-url('Serifa.otf', font);
-    src:asset-url('Serifa.otf?#iefix') format('opentype');
+    src: asset-url('Serifa.otf?#iefix') format('opentype');
 
 }
 
@@ -32,7 +32,7 @@
        style: 'normal';
     }
     src: asset-url('SerifaBold.otf', font);
-   src:asset-url('SerifaBold.otf?#iefix') format('opentype');
+   src: asset-url('SerifaBold.otf?#iefix') format('opentype');
 }
 
 $font-stack:    Serifa, Helvetica, sans-serif;
@@ -49,7 +49,8 @@ body {
 
 .header {
 height:85px;
-background-color:#C50200;
+//background-color:#C50200;
+background-color:#CCC;
 background-image: url(image-path('logo.png'));
 background-repeat:no-repeat;
 background-attachment:fixed;
