--- a/app/assets/stylesheets/welcome.css.scss.erb
+++ b/app/assets/stylesheets/welcome.css.scss.erb
@@ -49,9 +49,8 @@ body {
 
 .header {
 height:85px;
-//background-color:#C50200;
-background-color:#CCC;
-background-image: url(image-path('logo.png'));
+background-color:#C50200;
+background-image: url('/assets/images/logo.png');
 background-repeat:no-repeat;
 background-attachment:fixed;
 background-position:20px 25px;
