--- a/app/assets/stylesheets/welcome.css.scss.erb
+++ b/app/assets/stylesheets/welcome.css.scss.erb
@@ -50,7 +50,7 @@ body {
 .header {
 height:85px;
 background-color:#C50200;
-background-image: url('/assets/images/logo.png');
+background-image: url(/assets/images/logo.png);
 background-repeat:no-repeat;
 background-attachment:fixed;
 background-position:20px 25px;
