--- a/app/assets/stylesheets/welcome.css.scss.erb
+++ b/app/assets/stylesheets/welcome.css.scss.erb
@@ -38,22 +38,51 @@
 $font-stack:    Serifa, Helvetica, sans-serif;
 $primary-color: #444;
 $blue: #9BDED7;
-
+$gray: #DDD;
 body {
   font: 100% $font-stack;
   color: $primary-color;
 }
 
+.container{
+width: 700px ;
+margin-top:20px;
+  margin-left: auto ;
+  margin-right: auto ;
+ height:120px;
+  padding-top:10px;
+  
+  background-color:$gray;
 
+  -webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	-ms-border-radius: 6px;
+	-o-border-radius: 6px;
+	border-radius: 6px;
+}
+.logo{
+width:700px;
+margin-left:auto;
+margin-right:auto;
+height:80px;
+	background-image: image-url('logo.png');
+	background-repeat:no-repeat;
+	 background-position: left 00px bottom 18px;
 
+}
+
+.subHeaderText{
+	width:700px;
+
+margin-left:auto;
+margin-right:auto;
+}
 
 .header {
 height:85px;
 background-color:#C50200;
-background-image: image-url('logo.png');
-background-repeat:no-repeat;
-background-attachment:fixed;
-background-position:20px 25px;
+
+
 }
 
 .blueSubHeader{
@@ -63,7 +92,7 @@ font-size:28px;
 height:43px;
 background-color:#9BDED7;
 padding-top:15px;
-padding-left:20px;
+padding-left:0px;
 -webkit-font-smoothing: antialiased;
 }
 
@@ -113,19 +142,23 @@ padding-left:20px;
 }
 
 .flavorOptionsOn, .flavorOptionsOff{
+
 	float:left;
 	cursor:pointer;
 	height:30px;
-	margin-right:10px;
-	font-size:18px;
+	width:180px;
+	font-size:15px;
 	text-align:center;
-	padding:16px 20px 0px 20px;
+	padding-top:20px;
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 6px;
 	-ms-border-radius: 6px;
 	-o-border-radius: 6px;
 	border-radius: 6px;
 }
+
+
+
 
 .flavorOptionsOn
 {
@@ -135,7 +168,7 @@ padding-left:20px;
 
 .flavorOptionsOff
 {
-	background-color:#FFF;
+	background-color:#CCC;
 	color:$primary-color;
 }
 .flavorOptionsOff:hover{
