--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -16,13 +16,22 @@ function numberSorter(a, b) {
 	var seedLeft = 0;
 	var seedRight = 15;
 	var winningSeeds = new Array();
-var sweetSixteen = ["1Chocolate", "2Cookie & Cream", "3Vanilla","4Wedding Cake", "5Nutella Marshmallow", "6Strawberry","7Salted Caramel", "8King Cake", "9Mint Chocolate Chip","10Peanut Butter Chocolate Chip", "11Blueberry Cheesecake", "12Espresso", "13Apple Pie", "14 seed", "15 seed", "16 seed"];
+var sweetSixteen = ["Chocolate", "Cookie & Cream", "Vanilla","Wedding Cake", "Nutella Marshmallow", "Strawberry","Salted Caramel", "King Cake", "Mint Chocolate Chip","Peanut Butter Chocolate Chip", "Blueberry Cheesecake", "Espresso", "Apple Pie", "14 seed", "15 seed", "16 seed"];
 var eliteEight = new Array();
 var finalFour = new Array();
 var championship = new Array();
 var activeBracket = sweetSixteen;
 	function initializeVoter(){
-			
+
+			for (index = 0; index < sweetSixteen.length; ++index) {
+				var n = index + 1;
+				var str = '16_' + n;
+				
+				document.getElementById(str).innerHTML = sweetSixteen[index];
+				
+			}
+
+
 document.getElementById('matchupLeft').innerHTML = sweetSixteen[0];  
 document.getElementById('matchupRight').innerHTML = sweetSixteen[15]; 
 	}
@@ -75,9 +84,10 @@ document.getElementById('matchupRight').innerHTML = sweetSixteen[15];
 
 			if(round == 2){ ///Eite Eight
 			for (index = 0; index < winningSeeds.length; ++index) {
-				
     			eliteEight.push(sweetSixteen[winningSeeds[index]]);
 			}
+			populateEliteEight();
+			document.getElementById('round').innerHTML= "Elite Eight";
 			activeBracket = eliteEight;
 		}
 
@@ -87,6 +97,8 @@ document.getElementById('matchupRight').innerHTML = sweetSixteen[15];
     			finalFour.push(eliteEight[winningSeeds[index]]);
 			}
 			activeBracket = finalFour;
+		
+			document.getElementById('round').innerHTML= "Final Four";
 		}
 
 
@@ -97,12 +109,24 @@ document.getElementById('matchupRight').innerHTML = sweetSixteen[15];
     				
 			}
 			activeBracket = championship;
+			document.getElementById('round').innerHTML= "Championship!";
 		}
 		
 
 			winningSeeds = [];
 
 			presentNextMatchup();
+	}
+
+	function populateEliteEight(){
+
+			for (index = 0; index < eliteEight.length; ++index) {
+				var n = index + 1;
+				var str = '8_' + n;
+				console.log(winningSeeds);
+				document.getElementById(str).innerHTML = eliteEight[index];
+				
+			}
 	}
 
 	function myFunction(id)
@@ -126,16 +150,21 @@ document.getElementById(flavorChoice).className = "flavorOptionsOn";
 </head>
 
 <body onload="initializeVoter();">
-<div class="header"></div>
+<div class="header"><div class="logo"></div></div>
 <div style="height:5px; background-color:#B68076;"></div>
-<div class="blueSubHeader">Sweet Sixteen Tournament</div>
+<div class="blueSubHeader"><div class="subHeaderText">Sweet Sixteen Tournament</div></div>
 
+<div class="container">
 <div class="section" style="display:none;" id="winner"></div>
-<div class="section" id="matchups">
-	<div id="matchupLeft" onclick="vote('left')"></div>
-	<div id="matchupRight" onclick="vote('right')"></div>
-</div>
+<div class="circleNumber" id="round" style="height:20px; width:500px;font-size:18px; color:#555;margin-left:auto; margin-right:auto; text-align:center;">Sweet Sixteen</div>
+<div class="section" id="matchups" style="width:470px; margin-top:15px; margin-left:auto; margin-right:auto; height:150px;">
 
+	<div id="matchupLeft" class="flavorOptionsOff" onclick="vote('left')"></div>
+	<div class="circleNumber" style="float:left; padding-top:5px; margin-left:12px; text-align:center; color:#333;">vs</div>
+	<div id="matchupRight" class="flavorOptionsOff" style="float:right" onclick="vote('right')"></div>
+	<div style="clear:both"></div>
+</div>
+</div>
 
 
 
@@ -153,39 +182,86 @@ document.getElementById(flavorChoice).className = "flavorOptionsOn";
 	<div style="clear:both"></div>
 </div>
 
-<div class="section" style="visibility:hidden" id="sectionTwo">
+<div class="section" id="sectionTwo">
 	<div class="circle"><span class="circleNumber">2</span></div>
-	<div class="sectionTitle">Fill out your bracket</div>
+	
 
 	<table>
-<tr>
-  <td class="flavor on" >Chocolate</td>
-  <td></td>
+		<tr>
+	<td class="flavor off" id="16_1">16_1</td>
    <td ></td>
-    <td class="flavor off" style="position:relative; top:30px;"></td>
-  <td class="flavor on">Vanilla</td>
-</tr>
-<tr>
-   <td class="flavor off" >Strawberry</td>
-   <td class="flavor off" style="position:relative; bottom:30px;"></td>
-   <td class="flavor off" style="position:relative; top:50px;"></td> 
-    <td ></td>
-  <td class="flavor off">Espresso</td>
-</tr>
-<tr style="height:70px"> </tr>
-<tr>
-   <td class="flavor off" >Mint</td>
-<td class="flavor off" style="position:relative; top:30px;"></td>
- <td ></td>
-<td class="flavor off" style="position:relative; top:30px;"></td>
-  <td class="flavor off">Blueberry</td>
-</tr>
-<tr>
-   <td class="flavor off" >Nutella</td>
   <td ></td>
    <td ></td>
    <td></td>
-  <td class="flavor off">Peanut Butter</td>
+  <td>8_5</td>
+  <td  class="flavor off" id="16_2">16_2</td>
+</tr>
+
+<tr>
+		<td class="flavor off" id="16_16">16_16</td>
+  <td class="flavor on" id="8_1"></td>
+  <td></td>
+   <td ></td>
+    <td class="flavor off" style="position:relative; top:30px;"></td>
+  <td class="flavor on" id="8_3"></td>
+ 	<td class="flavor off" id="16_15" >16_15</td>
+</tr>
+
+
+<tr>
+		<td class="flavor off" id="16_3">16_3</td>
+   <td class="flavor off" id="8_8"></td>
+   <td class="flavor off" style="position:relative; bottom:30px;"></td>
+   <td class="flavor off" style="position:relative; top:50px;"></td> 
+    <td ></td>
+  <td class="flavor off" id="8_6"></td>
+ 	<td class="flavor off" id="16_4">16_4</td>
+</tr>
+<tr>
+	<td class="flavor off" id="16_14">16_14</td>
+   <td ></td>
+  <td ></td>
+   <td ></td>
+   <td></td>
+  <td>8_5</td>
+  <td  class="flavor off" id="16_13">16_13</td>
+</tr>
+
+<tr>
+		<td class="flavor off"id="16_5" >16_5</td>
+   <td class="flavor off" id="8_2"></td>
+<td class="flavor off" style="position:relative; top:30px;"></td>
+ <td ></td>
+<td class="flavor off" style="position:relative; top:30px;"></td>
+  <td class="flavor off" id="8_4"></td>
+ 	<td class="flavor off" id="16_6">16_6</td>
+</tr>
+<tr>
+		<td class="flavor off" id="16_12" >16_12</td>
+   <td class="flavor off" id="8_7" ></td>
+  <td ></td>
+   <td ></td>
+   <td></td>
+  <td class="flavor off" id="8_5"></td>
+	<td class="flavor off" id="16_11" >16_11</td>
+</tr>
+<tr>
+	<td class="flavor off" id="16_7" >16_7</td>
+   <td ></td>
+  <td ></td>
+   <td ></td>
+   <td></td>
+  <td>8_5</td>
+  <td  class="flavor off" id="16_8">16_8</td>
+</tr>
+<tr>
+	<td class="flavor off" id="16_10">16_10</td>
+   <td ></td>
+  <td ></td>
+   <td ></td>
+   <td></td>
+  <td>8_5</td>
+  <td  class="flavor off" id="16_9">16_9</td>
 </tr>
 </table>
 
