--- a/app/assets/stylesheets/welcome.css.scss.erb
+++ b/app/assets/stylesheets/welcome.css.scss.erb
@@ -45,7 +45,7 @@ body {
 }
 
 .container{
-width: 700px ;
+width: 900px ;
 margin-top:20px;
   margin-left: auto ;
   margin-right: auto ;
@@ -61,7 +61,7 @@ margin-top:20px;
 	border-radius: 6px;
 }
 .logo{
-width:700px;
+width:900px;
 margin-left:auto;
 margin-right:auto;
 height:80px;
@@ -72,7 +72,7 @@ height:80px;
 }
 
 .subHeaderText{
-	width:700px;
+	width:900px;
 
 margin-left:auto;
 margin-right:auto;
@@ -143,13 +143,13 @@ padding-left:0px;
 
 .flavorOptionsOn, .flavorOptionsOff{
 
-	float:left;
+	
 	cursor:pointer;
 	height:30px;
-	width:180px;
+	width:170px;
 	font-size:15px;
 	text-align:center;
-	padding-top:20px;
+	padding-top:12px;
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 6px;
 	-ms-border-radius: 6px;
@@ -170,11 +170,9 @@ padding-left:0px;
 {
 	background-color:#CCC;
 	color:$primary-color;
+	cursor:auto;
 }
-.flavorOptionsOff:hover{
-	background-color:$blue;
-	color:#FFF;
-}
+
 .btnSubmit{
 	background-color:#DED516;
 	font-family:myBemio;
@@ -199,7 +197,7 @@ padding:5px;
 
 td
 {
-width:160px;
+width:180px;
 }
 
 .flavor{
